# moshading

./: .clang-format  .clangd  .gdb_history  .gitignore  .gitmodules  LICENSE  README.md  asan.supp  compile_commands.json  flake.nix  fontawesome.cpp  fontawesome.hpp  index.html  lsan.supp  meson.build  result  tatus g  wasm.cross  wgpu_native.nix
.cache/clangd/index/: application.hpp.BB843C4A0AF859AD.idx  imconfig.h.36EE9AE17EFD5148.idx  imgui.cpp.1CE0B256873560FE.idx  imgui.h.D5312EDB7AE262AE.idx  imgui_draw.cpp.1BEDAE2F1B6DD513.idx  imgui_impl_glfw.cpp.ED30798D5ED4C94E.idx  imgui_impl_glfw.h.66B016D6781C480C.idx  imgui_impl_wgpu.cpp.EF441B2AE001D7E9.idx  imgui_impl_wgpu.h.58BDD53966292E5D.idx  imgui_internal.h.C4035A088A3C9B21.idx  imgui_tables.cpp.5CD18752700AF4B6.idx  imgui_widgets.cpp.4A6FF4F973A29ED7.idx  imstb_rectpack.h.030BE1A41D793337.idx  imstb_textedit.h.EAE794DBAD639787.idx  imstb_truetype.h.A896F421A5D875C7.idx  main.cpp.D9CC91C4E9006909.idx  shader.cpp.10219110FD0DAE3B.idx  shader.hpp.46F093ACA70E002A.idx  shader_parameter.cpp.D68A0CF779825A7A.idx  shader_parameter.hpp.35D682939FFA233A.idx  webgpu-raii.hpp.F2462A48125424D7.idx  webgpu.hpp.B2FC94E1E6350FA8.idx  webgpu.hpp.C7CC6093E6981D1D.idx
shaders/: bbbb.wgsl  chromatic_aberration.wgsl  circle.wgsl  dithering.wgsl  fullscreen_vertex.wgsl  image.wgsl  noise.wgsl  quad_vertex.wgsl  s1.wgsl  s2.wgsl  s3.wgsl  shader.wgsl
src/: app.cpp  app.hpp  app_native.cpp  app_web.cpp  application.cpp  application.hpp  context.cpp  context.hpp  file_loader.cpp  file_loader.hpp  file_loading.cpp  file_loading.hpp  frame.cpp  frame.hpp  gpu_context.cpp  gpu_context.hpp  image.hpp  log.hpp  main.cpp  renderer.cpp  renderer.hpp  renderer_native.cpp  renderer_web.cpp  shader.cpp  shader.hpp  shader.wgsl  shader_parameter.cpp  shader_parameter.hpp  shader_renderer.hpp  state.hpp  tagged_union.hpp  vec.hpp  window.hpp
src/context/: asset.hpp  cache.hpp  gpu.cpp  gpu.hpp  render_target.hpp  rendering.hpp  resource.hpp  shader_source.hpp
src/shader/: collection.hpp  image.hpp  manager.cpp  manager.hpp  parameter.cpp  parameter.hpp  shader.cpp  shader.hpp
src/shader/shaders/: chromatic_aberration.hpp  circle.hpp  dithering.hpp  image.hpp  noise.hpp
subprojects/wgpu-native/: Cargo.toml  README.md
subprojects/wgpu-native/src/: conv.rs  lib.rs
trash/: glfw3webgpu.cpp  old.cpp  shader.cpp  shader.hpp  vec.hpp  webgpu_bacics.cpp
utils/: embed_icons.py  embed_shaders.py  native_file_dialog.py
